--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!-- SECTION - Time -->
     <section class="time">
       <!-- TITLE--TIME -->
-      <h2 class="title--time">Preparation time</h2>
+      <h2 class="title-time">Preparation time</h2>
       <!-- LIST--TIME -->
-      <ul class="list--time">
+      <ul class="list-time">
         <li>
           <p><b>Total:</b> Approximately 10 minutes</p>
         </li>
@@ -46,7 +46,7 @@
     <section class="ingredients">
       <h2>Ingredients</h2>
       <!-- LIST--INGREDIENT -->
-      <ul type="square" class="list--ingredient">
+      <ul class="list-ingredient">
         <li><p>2-3 large eggs</p></li>
         <li><p>Salt, to taste</p</li>
         <li><p>Pepper, to taste</p></li>
@@ -59,7 +59,7 @@
     <section class="instructions">
       <h2>Instructions</h2>
       <!-- LIST--INSTRUCTIONS -->
-      <ol class="list--intructions">
+      <ol class="list-intructions">
         <li><p><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
         You can add a tablespoon of water or milk for a fluffier texture.</p></li>
         <li><p><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
@@ -95,11 +95,13 @@
         </tr>
       </table>
     </section>
+    
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/Hangar5/Recipe-page">Nantue Polchevski</a>.
+    </footer>
   </article>
   
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Hangar5/Recipe-page">Nantue Polchevski</a>.
-  </footer>
+  
 </body>
 </html>
