--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- CONTAINER -->
-  <article class="container">
+  <div class="container">
 
     <!-- IMAGE -->
     <div class="image">
