--- a/index.html
+++ b/index.html
@@ -26,53 +26,53 @@
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
       </header>
 
-      <!-- SECTION - Time -->
-      <section class="time">
-        <!-- TITLE--TIME -->
-        <h2 class="title-time">Preparation time</h2>
-        <!-- LIST--TIME -->
-        <ul class="list-time">
-          <li>
-            <p><b>Total:</b> Approximately 10 minutes</p>
-          </li>
-          <li>
-            <p><b>Preparation:</b> 5 minutes</p>
-          </li>
-          <li>
-            <p><b>Cooking:</b> 5 minutes</p>
-          </li>
-        </ul>
-      </section>
+    <!-- SECTION - Time -->
+    <section class="time">
+      <!-- TITLE-TIME -->
+      <h2 class="title-time">Preparation time</h2>
+      <!-- LIST-TIME -->
+      <ul class="list-time">
+        <li>
+          <p><b>Total:</b> Approximately 10 minutes</p>
+        </li>
+        <li>
+          <p><b>Preparation:</b> 5 minutes</p>
+        </li>
+        <li>
+          <p><b>Cooking:</b> 5 minutes</p>
+        </li>
+      </ul>
+    </section>
 
-      <!-- SECTION - ingredients -->
-      <section class="ingredients">
-        <h2>Ingredients</h2>
-        <!-- LIST--INGREDIENT -->
-        <ul class="list-ingredient">
-          <li><p>2-3 large eggs</p></li>
-          <li><p>Salt, to taste</p</li>
-          <li><p>Pepper, to taste</p></li>
-          <li><p>1 tablespoon of butter or oil</p></li>
-          <li><p>Optional fillings: cheese, diced vegetables, cooked meats, herbs</p></li>
-        </ul>
-      </section>
+    <!-- SECTION - ingredients -->
+    <section class="ingredients">
+      <h2>Ingredients</h2>
+      <!-- LIST-INGREDIENT -->
+      <ul class="list-ingredient">
+        <li><p>2-3 large eggs</p></li>
+        <li><p>Salt, to taste</p</li>
+        <li><p>Pepper, to taste</p></li>
+        <li><p>1 tablespoon of butter or oil</p></li>
+        <li><p>Optional fillings: cheese, diced vegetables, cooked meats, herbs</p></li>
+      </ul>
+    </section>
 
-      <!-- SECTION - intructions -->
-      <section class="instructions">
-        <h2>Instructions</h2>
-        <!-- LIST--INSTRUCTIONS -->
-        <ol class="list-intructions">
-          <li><p><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-          You can add a tablespoon of water or milk for a fluffier texture.</p></li>
-          <li><p><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
-          <li><p><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-          the eggs evenly coat the surface.</p></li>
-          <li><p><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the 
-          middle, sprinkle your chosen fillings over one half of the omelette.</p></li>
-          <li><p><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</p></li>
-          <li><p><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</p></li>
-        </ol>
-      </section>
+    <!-- SECTION - intructions -->
+    <section class="instructions">
+      <h2>Instructions</h2>
+      <!-- LIST--INSTRUCTIONS -->
+      <ol class="list-intructions">
+        <li><p><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+      You can add a tablespoon of water or milk for a fluffier texture.</p></li>
+        <li><p><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
+        <li><p><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+        the eggs evenly coat the surface.</p></li>
+        <li><p><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the 
+        middle, sprinkle your chosen fillings over one half of the omelette.</p></li>
+        <li><p><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</p></li>
+        <li><p><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</p></li>
+      </ol>
+    </section>
 
     <!-- SECTION - nutrition -->
     <section class="nutrition">
