--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- SECTION - intructions -->
     <section class="instructions">
       <h2>Instructions</h2>
-      <!-- LIST--INSTRUCTIONS -->
+      <!-- LIST-INSTRUCTIONS -->
       <ol class="list-intructions">
         <li><p><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
       You can add a tablespoon of water or milk for a fluffier texture.</p></li>
